Stochasticity Punishment Studies - Initial Classes and APIs

--- a/ecj/ec/app/tutorial4/.gitignore
+++ b/ecj/ec/app/tutorial4/.gitignore
@@ -10,3 +10,14 @@
 /Sub.class
 /X.class
 /Y.class
+/_unused_Cosine.class
+/_unused_Cube.class
+/_unused_Pi.class
+/_unuused_Sine.class
+/_unused_Square.class
+/SafeDiv.class
+/StochasticOPNode.class
+/OperatorWeight.class
+/OperatorGenerator.class
+/OperatorGenerator$OPERATORS.class
+/OperatorGenerator$OPERATOR.class
