added operator counter to count weights for operators in realistic cases

--- a/ecj/ec/app/tutorial4/.gitignore
+++ b/ecj/ec/app/tutorial4/.gitignore
@@ -22,3 +22,5 @@
 /OperatorGenerator$OPERATORS.class
 /OperatorGenerator$OPERATOR.class
 /IllegalDivision.class
+/CSVFileWriter.class
+/OperatorCounter.class
