--- a/ecj/.classpath
+++ b/ecj/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/Users/williamsmac/Desktop/DAASE/ECJ/ecj_install/jar/ecj.23.jar" sourcepath="/Users/williamsmac/Desktop/DAASE/ECJ/ecj_install/ec/gp/koza"/>
+	<classpathentry kind="lib" path="/Users/William/Desktop/DAASE/ECJ/ecj_all_in_one/jar/ecj.23.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
