--- a/probabilistic.smoothing.ecj/.classpath
+++ b/probabilistic.smoothing.ecj/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/Users/williamsmac/Desktop/DAASE/ECJ/ecj_install/jar/ecj.23.jar" sourcepath="/Users/williamsmac/Desktop/DAASE/ECJ/ecj_install/jar/ecj.23.jar"/>
-	<classpathentry kind="lib" path="/Users/williamsmac/Desktop/DAASE/java utils/opencsv-3.8.jar"/>
+	<classpathentry kind="lib" path="/Users/William/Desktop/DAASE/ECJ/ecj_all_in_one/jar/ecj.23.jar"/>
+	<classpathentry kind="lib" path="/Users/William/Downloads/opencsv-3.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
