--- a/probabilistic.smoothing.ecj.first.impl/.project
+++ b/probabilistic.smoothing.ecj.first.impl/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>probabilistic.smoothing.ecj.first.impl</name>
+	<name>classification.decision.stochastic</name>
 	<comment></comment>
 	<projects>
 	</projects>
