--- a/symbolic.regression.deterministic/.classpath
+++ b/symbolic.regression.deterministic/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/Users/rwei/Desktop/DAASE/ECJ/ecj_install/jar/ecj.23.jar"/>
+	<classpathentry kind="lib" path="lib/ecj.23.jar"/>
+	<classpathentry kind="lib" path="lib/opencsv-3.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
