--- a/classification.regression.deterministic.old/.project
+++ b/classification.regression.deterministic.old/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>classification.regression.deterministic.old</name>
+	<name>classification.regression.deterministic</name>
 	<comment></comment>
 	<projects>
 	</projects>
